--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div id="sorting-wrapper" class="flex-container my-4">
         </div>
         <div class="algo-btns text-center my-5">
-            <button type="button" class="btn btn-primary">Bubble</button>
-            <button type="button" class="btn btn-secondary">Selection</button>
-            <button type="button" class="btn btn-success">Insertion</button>
-            <button type="button" class="btn btn-danger">Merge</button>
+            <button type="button" class="btn btn-primary" id="bubbleSort">Bubble</button>
+            <button type="button" class="btn btn-secondary" id="selectionSort">Selection</button>
+            <button type="button" class="btn btn-success" id="insertionSort">Insertion</button>
+            <button type="button" class="btn btn-danger" id="mergeSort">Merge</button>
         </div>
     </div>
 
@@ -49,6 +49,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="sorting.js"></script>
+    <script src="algorithms/bubble.js"></script>
 </body>
 
 </html>
