--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         crossorigin="anonymous"></script>
     <script src="sorting.js"></script>
     <script src="algorithms/bubble.js"></script>
+    <script src="algorithms/selection.js"></script>
 </body>
 
 </html>
