selection sort added with changed color schema

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="sorting.js"></script>
+    <script src="algorithms/utils.js"></script>
     <script src="algorithms/bubble.js"></script>
     <script src="algorithms/selection.js"></script>
+    
 </body>
 
 </html>
