--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <input id="speed_input" type="range" min="20" max="300" stepDown=10 value=60>
                 </span>
             <button type="button" class="btn btn-success" id="gen-new-array">New Array</button>
+            <button type="button" class="btn btn-danger" id="stop-sorting" disabled>Stop Sorting</button>
             </div>
     </nav>
 
