add insertion sort

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="sorting.js"></script>
     <script src="algorithms/bubble.js"></script>
     <script src="algorithms/selection.js"></script>
+    <script src="algorithms/insertion.js"></script>
     
 </body>
 
