--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="algorithms/bubble.js"></script>
     <script src="algorithms/selection.js"></script>
     <script src="algorithms/insertion.js"></script>
+    <script src="algorithms/merge.js"></script>
     
 </body>
 
