--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="algorithms/utils.js"></script>
-    <script src="sorting.js"></script>
+    <script src="utils/sorting.js"></script>
     <script src="algorithms/bubble.js"></script>
     <script src="algorithms/selection.js"></script>
     <script src="algorithms/insertion.js"></script>
